{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 327,
  "lineage": "481ef115-2b89-af6c-0a80-c4991eb29a6f",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-rds-sg",
      "provider": "module.rds.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:952850818691:security-group/sg-0ebb96b73082d7e62",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ebb96b73082d7e62",
            "ingress": [],
            "name": "my-rds-sg",
            "name_prefix": "",
            "owner_id": "952850818691",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07f1b3181feb7a75e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:952850818691:subnet/subnet-024a13384d2bc7c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-024a13384d2bc7c7a",
            "map_public_ip_on_launch": false,
            "owner_id": "952850818691",
            "tags": {
              "Name": "my-test-private-subnet.1"
            },
            "vpc_id": "vpc-07f1b3181feb7a75e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:952850818691:subnet/subnet-00070b242328e943c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00070b242328e943c",
            "map_public_ip_on_launch": false,
            "owner_id": "952850818691",
            "tags": {
              "Name": "my-test-private-subnet.2"
            },
            "vpc_id": "vpc-07f1b3181feb7a75e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:952850818691:vpc/vpc-07f1b3181feb7a75e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060cdf5386c4a6a96",
            "default_route_table_id": "rtb-02239bab47dba1e71",
            "default_security_group_id": "sg-04540dea4ddf32dec",
            "dhcp_options_id": "dopt-abe2b6d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07f1b3181feb7a75e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02239bab47dba1e71",
            "owner_id": "952850818691",
            "tags": {
              "Name": "my-new-test-terraform-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}